[tool.poetry]
name = "cw3"
version = "0.1.0"
description = ""
authors = ["gtsoktoeva001 <galina-tsoktoeva@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
